--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: darkolivegreen; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
+
 .inline-block {
     display: inline-block;
     vertical-align: top;
@@ -10,8 +30,15 @@
 }
 nav {
     width: 73%;
-    padding: 1%;
-    outline: 1px solid green;
+    padding: 3%;
+
+}
+
+.nav-item {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    font-style: bold;
+    color: black;
 }
 ul {
     width: 50%;
@@ -25,28 +52,26 @@ li {
 
 }
 .heroImg {
-    height: 70vh;
+    height: 55vh;
     width: 100vw;
     position: relative;
     background-size: cover;
     background-position: 50% 50%;
     background-image: url(../images/KB.jpg);
-    background: lightGrey;
+    
 }
 .aboutMe {
     position: absolute;
-    height: 50%;
-    width: 50%;
-    top: 10px;
-    left: 10px;
-    background: rgba(0.0.0.0.5);
-    color: white;
+    height: 40%;
+    width: 45%;
+    top: 25px;
+    left: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 10px;
 
-    outline: 1px solid yellowgreen;
 
 }
 .content {
@@ -54,48 +79,91 @@ li {
     margin: 0 auto;
 }
 
+.about {
+    height: 18vh;
+    width: 98%;
+  
+    padding-top: 2%;
+    padding-left: 2%;
+}
 
-  .flexContainer {
-      display: flex;
-      Height: 200px;
-      align-items:space-around;
-      justify-content: center;
-      margin: 20px;
-      padding: 20px;
-      flex-direction: row;
-      outline: 2px solid red;
+.workSpot {
+        height: 70vh;
+        width: 98%;
+        padding-bottom: 2%;
+        padding-left: 2%;
+}
+
+  .reviveCard, .eaganCard, .petsCard {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 10px;
+    outline: 2px lightgray;
+    width: fit-content;
+    block-size: fit-content;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .reviveCard:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+  /* Add some padding inside the card container */
+  #reviveProject {
+    padding: 2px 16px;
   }
   #workGrid {
       display: grid;
       margin: 0px 5%;
-      min-height: 500px;
-      height: 70vh;
-      grid-template-rows: 33% 33% 33%;
-      grid-template-columns: 25% 75%;
+      grid-template: 150px / auto auto auto;
+      grid-template-columns: 33% 33% 33%;
+      grid-template-rows: 200px 200px 200px;
+      grid-column-gap: 20px;
+      grid-row-gap: 10px;
+      padding: 10px;
+      text-align: center;
+      justify-content:left;
       grid-template-areas: 
-      "reviveImage" "eaganImage" "petsImage" 
-      "reviveProject" "eaganProject" "petsProject"; 
-      outline: 2px solid blue;
+      "reviveCard" "eaganCard" "petsCard"; 
+     
   }
 
 #reviveImage {
+    border-radius: 10px 10px 0 0;
+ 
+    outline: 2px lightgray;
+    padding: 10px;
     grid-area: reviveImage;
-    background-image: url("../images/revive.png");
+    
+    
+
 }
 
 #eaganImage {
+    border-radius: 10px 10px 0 0;
+    outline: 2px lightgray;
+    padding: 10px;
+
     grid-area: eaganImage;
-    background-image: url("../images/Eagan\ Art.png");
+    
 }
 
 #petsImage {
+    border-radius: 10px 10px 0 0;
+    outline: 2px lightgray;
+    padding: 10px;
     grid-area: petsImage;
-    background-image: url(../images/Petsonly.png);
+  
 }
 
 #reviveProject, #eaganProject, #petsProject {
-    outline: 2px solid black;
-    padding: 5px;
+    height:200px;
+    outline: 2px lightgray;
+    width: 100%;
+    border-radius: 0px 0px 10px 10px;
+    
+    display: inline-block;
     align-items: center;
 
 }
@@ -107,6 +175,28 @@ li {
     display: flex;
     position: relative;
   }
+
+  * {box-sizing:border-box}
+
+/* Container for skill bars */
+.container {
+  width: 100%; /* Full width */
+  background-color: #ddd; /* Grey background */
+}
+
+.skills {
+  text-align: right; /* Right-align text */
+  padding-top: 10px; /* Add top padding */
+  padding-bottom: 10px; /* Add bottom padding */
+  color: white; /* White text color */
+}
+
+.Marketing {width: 90%; background-color: #04AA6D;} 
+.uxui {width: 80%; background-color: skyblue;} 
+.team {width: 80%; background-color: teal;} 
+.front {width: 40%; background-color: purple;} 
+
+
 footer {
     background-color: #373738;
     width: 1440px;
